--- a/app/globals.css
+++ b/app/globals.css
@@ -178,3 +178,23 @@ body {
 
   
 }
+
+
+.lds-hourglass-small {
+  display: inline-block;
+  position: relative;
+  width: 24px;
+  height: 24px;
+}
+.lds-hourglass-small:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 2px;
+  box-sizing: border-box;
+  border: 10px solid #3b82f6;
+  border-color: #3b82f6 transparent #3b82f6 transparent;
+  animation: lds-hourglass 1.2s infinite;
+}
